# FileCommander

./: CMakeLists.txt  README.md  main.cpp
include/: AsyncCommand.h  CommandBase.h  CommandBase.hpp  CommandIdentitier.h  CompareDirCmd.h  SearchDuplicateFilesMD5Cmd.h  SearchDuplicateFilesSBCmd.h  SyncCommand.h
include/Interfaces/: WatchConsumer.h
include/Utils/: FileSystemUtils.h  FileSystemUtils.hpp
include/Widget/: EventProcessor.h  EventProcessor.hpp
src/: AsyncCommand.cpp  CommandBase.cpp  CompareDirCmd.cpp  SearchDuplicateFilesMD5Cmd.cpp  SearchDuplicateFilesSBCmd.cpp  SyncCommand.cpp
src/Widget/: EventProcessor.cpp
